Clean up ResolveIOStreams